adjust menu width

--- a/css/main.scss
+++ b/css/main.scss
@@ -25,11 +25,13 @@ body {
   justify-content: space-between;
 
   width: 100%;
-  padding: 12px 12px;
+  margin: 0 auto;
+  padding: 12px 0;
   box-sizing: border-box;
 
   @include media-query(DESKTOP) {
-    padding: 12px 36px;
+    max-width: 900px;
+    padding: 12px 0;
   }
 
   .menu-items-container {
