--- a/css/main.scss
+++ b/css/main.scss
@@ -229,12 +229,13 @@ body {
   justify-content: center;
 
   .swipebox {
-    width: 45%;
-    margin: 10px 5px 0;
+    width: 50%;
+    padding: 10px 5px 0;
+    box-sizing: border-box;
 
     @include media-query(DESKTOP) {
-      width: 45%;
-      margin: 24px 5px 0;
+      width: 33%;
+      padding: 24px 5px 0;
     }
   }
 }
