adds outra.s to menu

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,6 +8,16 @@
       Works
     </a>
 
+    <a class="menu-item" href="https://outras.ml" target="_blank">
+      Shop
+    </a>
+
+    <!-- 
+    <a class="menu-item" href="{{site.baseurl}}/works/">
+      Workshops
+    </a> 
+    -->
+
     <a class="menu-item" href="{{site.baseurl}}/about/">
       About
     </a>
