--- a/_sass/constants.scss
+++ b/_sass/constants.scss
@@ -31,6 +31,15 @@ $RESPONSIVE-SPACING: 2vw;
 $MENU-ITEM-SPACING: 4px;
 $MENU-WIDTH: 280px;
 
+$FAMILY-SANS: 'Raleway', 'Arial';
+
+$MENU-TITLE-SIZE: 1.25rem;
+$MENU-ITEM-SIZE: 1.15rem;
+
+$TITLE-SIZE: 1.5rem;
+$TEXT-SIZE: 0.9rem;
+$LINK-SIZE: 0.9rem;
+
 $one_column: 2 * $MENU-WIDTH;
 $two_columns: 3 * $MENU-WIDTH;
 $three_columns: 4 * $MENU-WIDTH;
