--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/css/fontello.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<link href="https://fonts.googleapis.com/css?family=Raleway:400,700%7CSource+Code+Pro:400" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Raleway:200,400,600" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/assets/favicons/favicon.ico">
 
 <link rel="stylesheet" href="{{ site.baseurl }}/css/swipebox.min.css">
