--- a/_includes/social-footer.html
+++ b/_includes/social-footer.html
@@ -32,7 +32,7 @@
     {% endif %}
     {% if page.email %}
       <label class="fu-icon" for="emailCheck">
-        <span class="fa fa-envelope email-icon"></span>
+        <a class="fa fa-envelope"></a>
       </label>
     {% endif %}
   </div>
