--- a/css/main.scss
+++ b/css/main.scss
@@ -51,17 +51,24 @@ s {
 }
 
 .menu {
+  position: sticky;
+  top: 0;
+
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 
   width: 100%;
-  margin: 0 auto;
+  margin: 0 auto 12px;
   padding: 12px;
   box-sizing: border-box;
 
+  background-color: $BACKGROUND;
+  z-index: 1;
+
   @include media-query(DESKTOP) {
     max-width: 900px;
+    margin: 0 auto 20px;
     padding: 12px 0;
   }
 
