open Shop in new window

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
       Works
     </a>
 
-    <a class="menu-item" href="https://outras.ml">
+    <a class="menu-item" href="https://outras.ml" target="_blank">
       Shop
     </a>
 
