--- a/css/main.scss
+++ b/css/main.scss
@@ -321,6 +321,11 @@ s {
   }
 }
 
+.html-video-container {
+  width: 100%;
+  margin: 1rem auto;
+}
+
 .fu-footer {
   display: flex;
   justify-content: center;
