--- a/_includes/social-footer.html
+++ b/_includes/social-footer.html
@@ -1,41 +1,21 @@
-{% if page.github or page.vimeo or page.pics or page.astros or page.www or page.collab or page.email %}
+{% if page.github or page.vimeo or page.email %}
   <div class="fu-footer">
     {% if page.github %}
       <div class="fu-icon">
-        <a href="{{ page.github }}" class="fa fa-github" target="_blank"></a>
+        <a href="{{ page.github }}" class="fa fa-github" target="_blank" aria-label="GitHub link"></a>
       </div>
     {% endif %}
     {% if page.vimeo %}
       <div class="fu-icon">
-        <a href="{{ page.vimeo }}" class="fa fa-vimeo" target="_blank"></a>
-      </div>
-    {% endif %}
-    {% if page.pics %}
-      <div class="fu-icon">
-        <a href="{{ page.pics }}" class="fa fa-camera" target="_blank"></a>
-      </div>
-    {% endif %}
-    {% if page.astros %}
-      <div class="fu-icon">
-        <a href="{{ page.astros }}" class="fo-asterisk" target="_blank"></a>
-      </div>
-    {% endif %}
-    {% if page.www %}
-      <div class="fu-icon">
-        <a href="{{ page.www }}" class="fa fa-anchor" target="_blank"></a>
-      </div>
-    {% endif %}
-    {% if page.collab %}
-      <div class="fu-icon">
-        <a href="{{ page.collab }}" class="fa fa-heart" target="_blank"></a>
+        <a href="{{ page.vimeo }}" class="fa fa-vimeo" target="_blank" aria-label="Vimeo link"></a>
       </div>
     {% endif %}
     {% if page.email %}
       <label class="fu-icon" for="emailCheck">
-        <a class="fa fa-envelope"></a>
+        <div class="fa fa-envelope email"></div>
       </label>
     {% endif %}
   </div>
   <input id="emailCheck" type="checkbox">
-  <img class="email-img" src="/assets/covers/contact_email_wb.png">
+  <img class="email-img" src="/assets/covers/contact_email_wb.png" alt="email address">
 {% endif %}
