adds better alt txts and link titles

--- a/_includes/project-list.html
+++ b/_includes/project-list.html
@@ -17,7 +17,7 @@
 
     <div class="list-item">
       <a href="{{ post.url }}">
-        <div class="list-image" style="background-image: url('{{ postCover }}');" alt="{{ post.title }}" title="{{ post.title }}"></div>
+        <div class="list-image" style="background-image: url('{{ postCover }}');" title="{{ post.title }}"></div>
         <div class="list-title">{{ post.title }}</div>
       </a>
     </div>
