--- a/_includes/project-list.html
+++ b/_includes/project-list.html
@@ -12,7 +12,7 @@
     {% endfor %}
 
     {% if post.cover %}
-      {% assign postCover = site.baseurl | append: post.cover %}
+      {% assign postCover = post.cover | relative_url %}
     {% endif %}
 
     <div class="list-item">
