removes site.baseurl in favor of using relative_url filter

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -6,25 +6,22 @@
 
 <meta property="og:title" content="{{page.title}}">
 <meta property="og:type" content="article">
-<meta property="og:url" content="{{site.url}}{{site.baseurl}}{{page.url}}">
+<meta property="og:url" content="{{ page.url | absolute_url }}">
 <meta property="og:description" content="{{site.title}} - {{page.title}}">
 <meta property="og:site_name" content="{{site.title}}">
 <meta property="article:publisher" content="https://www.facebook.com/{{site.social.facebook_user}}">
 
-{% assign basepath = site.url | append: site.baseurl %}
-{% assign coverImagePath = basepath | append: "/assets/covers/cover.jpg" %}
-
 {% if page.cover %}
-  {% assign coverImagePath = basepath | append: page.cover %}
+  {% assign coverImagePath = page.cover %}
 {% else %}
   {% assign postSlug = page.url | split: "/" | last %}
-  {% for file in site.static_files %}
-    {% if file.path contains postSlug %}
-      {% assign coverImagePath = basepath | append: file.path %}
-      {% break %}
-    {% endif %}
-  {% endfor %}
+  {% assign slugFiles = site.static_files | where_exp:"item", "item.path contains postSlug" %}
+  {% if slugFiles.size > 0 %}
+    {% assign coverImagePath = slugFiles[0].path %}
+  {% else %}
+    {% assign coverImagePath = "assets/covers/cover.jpg" %}
+  {% endif %}
 {% endif %}
 
-<meta name="twitter:image" content="{{ coverImagePath }}">
-<meta property="og:image" content="{{ coverImagePath }}">
+<meta name="twitter:image" content="{{ coverImagePath | absolute_url }}">
+<meta property="og:image" content="{{ coverImagePath | absolute_url }}">
