--- a/_includes/project-list.html
+++ b/_includes/project-list.html
@@ -1,15 +1,18 @@
 <div class="list-container">
-  {% assign post_categories = include.categories | split: ',' %}
-  {% assign _posts = site.posts | where_exp:"item", "post_categories contains item.category" %}
+  {%- assign post_categories = include.categories | split: ',' -%}
+  {%- assign _posts = site.posts | where_exp:"item", "post_categories contains item.category" -%}
 
   {% for post in _posts %}
-
     {% if post.cover %}
-      {% assign postCover = post.cover | relative_url %}
+      {%- assign postCover = post.cover | relative_url -%}
     {% else %}
-      {% assign postSlug = post.url | split: "/" | last %}
-      {% assign postFiles = site.static_files | where_exp:"item", "item.path contains postSlug" %}
-      {% assign postCover = postFiles[0].path | relative_url %}
+      {%- assign postSlug = post.url | split: "/" | last -%}
+      {% for f in site.static_files %}
+        {% if f.path contains postSlug %}
+          {%- assign postCover = f.path | relative_url -%}
+          {% break %}
+        {% endif %}
+      {% endfor %}
     {% endif %}
 
     <div class="list-item">
