show workshops menu in desktop

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,9 +12,9 @@
       Shop
     </a>
 
-    <!-- <a class="menu-item" href="{{ 'workshops/' | relative_url }}">
+    <a class="menu-item hide-mobile" href="{{ 'workshops/' | relative_url }}">
       Workshops
-    </a> -->
+    </a>
 
     <a class="menu-item" href="{{ 'about/' | relative_url }}">
       About
