--- a/_includes/project-list.html
+++ b/_includes/project-list.html
@@ -3,6 +3,12 @@
   {%- assign _posts = site.posts | where_exp:"item", "post_categories contains item.category" -%}
 
   {% for post in _posts %}
+    {%- assign is_odd = forloop.index0 | modulo: 2 -%}
+
+    {% if is_odd == 0 and forloop.last and page.permalink == "/" %}
+      {% assign last_even_home_class = "last-even-home" %}
+    {% endif %}
+
     {% if post.cover %}
       {%- assign postCover = post.cover | relative_url -%}
     {% else %}
@@ -15,7 +21,7 @@
       {% endfor %}
     {% endif %}
 
-    <div class="list-item">
+    <div class="list-item {{ last_even_home_class }}">
       <a href="{{ post.url | relative_url }}">
         <div class="list-image" style="background-image: url('{{ postCover }}');" title="{{ post.title }}"></div>
         <div class="list-title">{{ post.title }}</div>
