change outras.ml url

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,7 +5,7 @@
 
   <div class="menu-items-container">
     <a class="menu-item" href="{{ 'works/' | relative_url }}">Works</a>
-    <a class="menu-item" href="https://outras.ml" target="_blank">Shop</a>
+    <a class="menu-item" href="https://outras.thiagohersan.com" target="_blank">Shop</a>
     <!-- <a class="menu-item hide-mobile" href="{{ 'workshops/' | relative_url }}">Workshops</a> -->
     <a class="menu-item" href="{{ 'about/' | relative_url }}">About</a>
   </div>
